lab1/Test/L1-A-10-43.output
Error Type A at Line 3
Error Type B at Line 8
Error Type B at Line 32
Error Type A at Line 38
Error Type B at Line 42
Error Type B at Line 43
Error Type B at Line 45
