lab1/Test/L1-A-10-43.cmm
int ;
float P9SzTx8Ry 
;@
struct {
}rT , mU6aM6 

;
int Gx3W6FbEN5p2eGwKZ ( int MMolGB , struct , vHqoCENQXPdUw2YuzC 
  df36JpCNpNy1e3 ) {
  if ( qgbnVPEGggCZZ3yK0 )   while ( EDAtsLqI6vwuQR7ZAz 
    ) {
    struct GmVQC {
    }CDQZTulf [ 1649477532 ] = Jzz7kFY3mRfxgsbYcXd 
      ;
    if ( YYyc )     while ( IDd4BeCLZEeT )     while 
      ( XuTOfC0ht6zGv3wuM )     KVbfLFpZ1FRoptAc ;


else     if ( hxIs6jGJ7Gb1a2q75 )     if ( GIbI1O 
      )     return CBFuFjKPDMadS ;



  }
else   gRW && btDt6GuBg != Cn9ZZP6HpoZJSlTppqQk - 
    ! - l_PU27jrHBUCY4 ( kL65 = gsPwGnpGodkZLh || Iw1c3ReCM1 
    >= koqQRDb / fh9OJ [ mJ = J || IueYWGWLnRaHx8chRT4 
    < UzOca3grz3fve5wjGHb + h_d_j0LG * Mo6rizCVGN_FPAZasW 
    ( T88PdzDxLno9h_ , Urh2u8msc8 && XV33zU > ( _yXJsvsok_Fw 
    == JFowbgPoR [ EJ4tmLrkOrzVmqNwLV <= - RpQmXZm5EouHKyF8wIxE 
    ( tu = _pznUKXOaIALgMUl = TfIA4jK && ! rLV2nn . TwlN83CPePQoM 
    ) ] ) < ) / - 378073044 . EvVh * 644926335.308971643 
    ] ) * S9tgw5_sWRZy8TUcREnB ( ) ;

}
struct {
};
int ;#
int sb7bSao3bgc ( ) {
}
struct {
  int j_pR3mleePDsaL , E4Z float ;
* };
int ;
if 